
--------------------------------------------
                  CURRENT
--------------------------------------------

Version 0.3l
------------
* Misc bug fixes and typos.
* Added shortcut keys for exploration buttons (right side): 6-0
* Gwendy no longer joins you at 100% lust.
* Cale's shop is implemented. Note that a lot of the stuff he sells is completely useless at this point in time.

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.3k5
-------------
* Made expToLevel more consistent with save/load.
* Fera sex fix.
* Possible fix for Ranger job.
* Fixed a bug in CocksThatFit, that might have caused some problems with Rosalin's sex scene. Possibly other scenes too.
* Fixed a stupid bug that would return the wrong cum quantity.
* Lots of typo fixes to the intro.

Version 0.3k4
-------------
* Counter attack status effect implemented (Set trap ability).
* Implemented and activated Ranger job.
* Added the odd shop to Rigard shopping street. You can buy some strapons there.
* Added an armor shop to Rigard shopping street.
* Added a weapon shop to Rigard shopping street.
* Fixed some bullshit enemy AI. Ability use should actually draw SP now. Might have caused some bugs, report if the game crashes mid-fight.
* Kiai anal fix.
* Fixed a few bugs in feline scenes.
* Fixed a few bugs in equine scenes.
* Fixed a bug in fera scenes.
* Fixed a bug in elven nectar scene.
* Fixed some Cale typos.
* Fixed exp to level for Terry and Miranda.
* Added a print of total items kept for alchemy recipes (good for checking how many you can make, or what you are missing).
* Nasty Miranda won't ask the player to sleep over anymore.

Version 0.3k3
-------------
* Fixed a few Cale related bugs.
* Fixed a Cale bug that would break the cheat Cavalcade fuck if you were pure female.
* Fixed an error in lust gain that was causing unintentional massive lust spikes.