@@ -11,6 +11,7 @@ Version 0.3l
 * Added shortcut keys for exploration buttons (right side): 6-0
 * Gwendy no longer joins you at 100% lust.
 * Cale's shop is implemented. Note that a lot of the stuff he sells is completely useless at this point in time.
+* Reduced spawn rate of felines to be roughly equal to the other mobs in the plains.
 
 --------------------------------------------
              PREVIOUS VERSIONS
